@@ -1,0 +1,42 @@
+Templates
+=========
+
+Security
+--------
+
+The TemplateRoleMap allowes producers the zope.ManageContent permission.
+
+>>> import zeit.cms.content.template
+>>> trm = zeit.cms.content.template.TemplateRoleMap(None)
+>>> trm
+<zeit.cms.content.template.TemplateRoleMap object at 0x...>
+
+
+Verify interface:
+
+>>> import zope.interface.verify
+>>> zope.interface.verify.verifyObject(
+...     zope.securitypolicy.interfaces.IRolePermissionMap, trm)
+True
+
+Verify the methods:
+
+>>> trm.getPermissionsForRole('zeit.Producer')
+[('zope.ManageContent', PermissionSetting: Allow)]
+>>> trm.getPermissionsForRole('foobar')
+[]
+
+>>> trm.getRolesForPermission('zope.ManageContent')
+[('zeit.Producer', PermissionSetting: Allow)]
+>>> trm.getRolesForPermission('zope.ManageApplication')
+[]
+
+>>> trm.getSetting('zope.ManageContent', 'zeit.Producer')
+PermissionSetting: Allow
+>>> trm.getSetting('zope.ManageApplication', 'zeit.Producer')
+PermissionSetting: Unset
+>>> trm.getSetting('zope.ManageContent', 'zeit.Editor')
+PermissionSetting: Unset
+
+>>> trm.getRolesAndPermissions()
+[('zope.ManageContent', 'zeit.Producer', PermissionSetting: Allow)]
